# ml_for_ftir

./: .gitignore  LICENSE  Makefile  README.md  a_supervisedml.py  create_single_principal_wavenumber_csv.py  experiment_test.json  experiment_zero.json  pyproject.toml
000_final_results/group_fam/: grid_search_results__group_fam_back_projection.csv  results_summary_group_fam.csv  results_summary_group_fam_back_projection.csv  results_summary_group_fam_back_projection.xlsx  results_summary_group_fam_cross.csv  results_summary_group_fam_cross.xlsx
000_principal_wavenumber/group_fam/: group_fam_wavenumbers_importance_CAPILAR_60pct_Decision Tree (BayesSearchCV)_accuracy_0.7076.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Decision Tree (BayesSearchCV)_accuracy_0.7331.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Decision Tree (BayesSearchCV)_accuracy_0.7740.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Decision Tree (GridSearchCV)_accuracy_0.8346.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_MLP (BayesSearchCV)_accuracy_0.8397.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_MLP (BayesSearchCV)_accuracy_0.8593.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_MLP (GridSearchCV)_accuracy_0.8005.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Random Forest (BayesSearchCV)_accuracy_0.7809.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Random Forest (BayesSearchCV)_accuracy_0.8005.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Random Forest (BayesSearchCV)_accuracy_0.8201.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_Random Forest (GridSearchCV)_accuracy_0.7613.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_XGBoost (BayesSearchCV)_accuracy_0.7920.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_XGBoost (BayesSearchCV)_accuracy_0.8005.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_XGBoost (BayesSearchCV)_accuracy_0.8201.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_XGBoost (BayesSearchCV)_accuracy_0.8295.csv  group_fam_wavenumbers_importance_CAPILAR_60pct_XGBoost (GridSearchCV)_accuracy_0.7468.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Decision Tree (BayesSearchCV)_accuracy_0.7089.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Decision Tree (BayesSearchCV)_accuracy_0.7345.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Decision Tree (BayesSearchCV)_accuracy_0.7481.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Decision Tree (GridSearchCV)_accuracy_0.8507.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_MLP (GridSearchCV)_accuracy_0.7798.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Random Forest (BayesSearchCV)_accuracy_0.7677.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Random Forest (BayesSearchCV)_accuracy_0.7738.csv  group_fam_wavenumbers_importance_CAPILAR_70pct_Random Forest (BayesSearchCV)_accuracy_0.7994.csv  (+92 more)
ml4fir/: .env  __init__.py  cli.py  config.py  dataset.py  features.py  plots.py
old/: conventions_to_start.md  model_training.py  requirements.in  zz_config_supervised_functions.py
(+4624 files in other folders)
